--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>My name is ${data.name}</h1>
         <h2>My location: ${data.location}</h2>
-        <h2>Pulbic REPOSITORIES: ${data.public_repos}</h2>
+        <h2>Public REPOSITORIES: ${data.public_repos}</h2>
         <h2>followers: ${data.followers}</h2>
         <h2>Stars: ${data.stars}</h2>
     </div>
